[gd_scene load_steps=6 format=3 uid="uid://v62wbukrq7y4"]

[ext_resource type="Script" uid="uid://bda6ute81ff5l" path="res://scripts/Stone.gd" id="1_hmdus"]
[ext_resource type="Shader" uid="uid://2s7uur1y7188" path="res://scenes/game/stone.tres" id="2_h118k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h118k"]
render_priority = 0
shader = ExtResource("2_h118k")

[sub_resource type="CylinderMesh" id="CylinderMesh_hmdus"]
material = SubResource("ShaderMaterial_h118k")
radial_segments = 8
rings = 3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bmt60"]
height = 0.345123
radius = 0.833008

[node name="Stone" type="RigidBody3D" groups=["stones"]]
transform = Transform3D(1.02339, 0, 0, 0, 1.02339, 0, 0, 0, 1.02339, 0, 0, 0)
collision_mask = 4
script = ExtResource("1_hmdus")

[node name="mesh_instance_3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.81948, 0, 0, 0, 0.187306, 0, 0, 0, 1.71631, 0, 0, 0)
instance_shader_parameters/ColorParameter = Color(0.287827, 0.357814, 0.382401, 1)
mesh = SubResource("CylinderMesh_hmdus")

[node name="collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1.1127, 0, 0, 0, 1.1127, 0, 0, 0, 1.1127, 0, 0.000778073, 0)
shape = SubResource("CylinderShape3D_bmt60")
debug_color = Color(0.97851, 0, 0.3956, 0.42)

[node name="stone_area" type="Area3D" parent="." groups=["stones"]]

[node name="collisionShape_area" type="CollisionShape3D" parent="stone_area"]
transform = Transform3D(1.1127, 0, 0, 0, 1.1127, 0, 0, 0, 1.1127, 0, 0.000778073, 0)
shape = SubResource("CylinderShape3D_bmt60")
debug_color = Color(0.97851, 0, 0.3956, 0.42)

[node name="down_ray" type="RayCast3D" parent="." groups=["stone_ray_cast"]]
transform = Transform3D(0.3, 0, 0, 0, -7.60578e-09, -1, 0, 0.174, -4.37114e-08, 0, -0.134597, 0)
target_position = Vector3(0, 0, 1)
collide_with_areas = true
debug_shape_custom_color = Color(0.966612, 0.621442, 0.801451, 1)
debug_shape_thickness = 5

[node name="aim_ray" type="RayCast3D" parent="." groups=["stone_ray_cast"]]
transform = Transform3D(5, 0, 0, 0, -3, 9.05975e-07, 0, -4.52987e-07, -6, 0, -0.00957833, -1.54509)
target_position = Vector3(0, 0, 1)
collide_with_areas = true
debug_shape_custom_color = Color(0.956863, 0.823529, 0, 1)
debug_shape_thickness = 5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
